* Curve: MessageIndex Legend not middle aligned (ie6.css, ie7.css) [Bug 3039]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8336 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/ie6.css
+++ b/Themes/curve/css/ie6.css
@@ -61,6 +61,12 @@
 {
 	border-bottom: solid 1px white;
 }
+.description
+{
+	padding: 2em 1em 1em 1em;
+	overflow: auto;
+}
+
 /* **************** */
 /* from Display.template */
 /* **************** */
