--- a/Themes/curve/css/ie7.css
+++ b/Themes/curve/css/ie7.css
@@ -16,6 +16,11 @@
 {
 	border-bottom: solid 1px white;
 }
+.description
+{
+	padding: 2em 1em 1em 1em;
+	overflow: auto;
+}
 
 /* **************** */
 /* from Display.template */
